--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .header {
+    font-size: 2rem;
+    margin: 30px 0 50px 0;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(31, 129, 129);
+  }
+  
+  .main {
+    display: flex;
+    justify-content: space-between;
+    width: 40%;
+  }
+  
+  .input {
+    width: 80%;
+    padding: 5px;
+    font-size: 1.3rem;
+    margin-bottom: 25px;
+    outline: none;
+    border: none;
+  }
+  
+  .add {
+    width: 20%;
+    font-size: 1.3rem;
+    height: 35px;
+    cursor: pointer;
+    color: #ffffff;
+    background-color: #00ff7c;
+    border: 1px solid #00ff7c;
+    border-radius: 5px;
+    box-shadow: 0px 3px 0px #00823f;
+    transition: all ease 0.3s;
+  }
+  
+  .add:active {
+    box-shadow: 0 2px 0 #00823f;
+  }
+  
+  .footer {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+  }
+  
+  .cell {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.3rem;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    text-align: center;
+    align-items: center;
+  }
+  
+  .textFavorite {
+    text-shadow: rgb(0, 115, 255) 0 0 10px;
+    border-bottom: 2px solid rgb(3, 84, 184);
+  }
